# Catalyst_AI_Voice_Studio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
catalyst_ai_voice_studio/: __init__.py
catalyst_ai_voice_studio/prosody_planner/: __init__.py  model.py  rules.py
catalyst_ai_voice_studio/text_normalizer/: __init__.py  normalize.py  phonemizer.py
catalyst_ai_voice_studio/tts_finetune/: __init__.py  eval_metrics.py  prepare_dataset.py  train_xtts.py
catalyst_ai_voice_studio/tts_service/: __init__.py  base.py  openvoice_loader.py  xtts_loader.py
catalyst_ai_voice_studio/utils/: __init__.py  audio_tools.py  logger.py
catalyst_ai_voice_studio/web_streamer/: __init__.py  api.py  schemas.py
docs/: INTEGRATION_GUIDE.md
examples/: demo_cli.py  demo_notebook.ipynb
scripts/: benchmark.py  download_models.py
tests/: __init__.py  test_api.py  test_normalizer.py  test_prosody.py  test_tts.py
